# UCI-Chess-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bitOps.h  board.cpp  board.h  main.cpp  moveGeneration.cpp  moveGeneration.h  piece.h
cmake/: clang-cxx-dev-tools.cmake
src/: CMakeLists.txt  bitOps.h  board.cpp  board.h  evaluation.cpp  evaluation.h  main.cpp  move.cpp  move.h  moveGeneration.h  moveGenerator.cpp  moveGenerator.h  moveUtils.cpp  moveUtils.h  piece.cpp  piece.h  search.cpp  search.h
test/: CMakeLists.txt  perft.cpp
tests/: CMakeLists.txt  perft.cpp
