include(GoogleTest)
find_package(GTest REQUIRED)
add_compile_options(-g)
add_executable(PerftTests perft.cpp)
add_library(Chess ${PROJECT_SOURCE_DIR}/src/board.cpp ${PROJECT_SOURCE_DIR}/src/moveUtils.cpp ${PROJECT_SOURCE_DIR}/src/move.cpp ${PROJECT_SOURCE_DIR}/src/moveGenerator.cpp)
target_link_libraries(PerftTests GTest::GTest GTest::Main Chess)
gtest_discover_tests(PerftTests)